<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:text="@string/container_title"
            style="@style/AppTitle"/>

        <Button
            android:id="@+id/spotify_steamer"
            android:text="@string/spotify_steamer"
            style="@style/projectsButton"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/super_duo"
            style="@style/projectsButton"
            android:text="@string/super_duo"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:text="@string/build_it_bigger"
            android:onClick="onClick"
            style="@style/projectsButton"/>

        <Button
            android:id="@+id/xyz_reader"
            android:text="@string/xyz_reader"
            style="@style/projectsButton"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/capstone"
            android:text="@string/capstone"
            android:onClick="onClick"
            style="@style/mainProject"/>
    </LinearLayout>

</RelativeLayout>
